fix bug, the slider content box jumps to final position after putting it into a container and aligning it. Add breakpoints to the animation positions so the animation finishes at the same position as the default, and stops this jump.

--- a/wp-content/themes/sydneytheme/style.css
+++ b/wp-content/themes/sydneytheme/style.css
@@ -517,35 +517,51 @@ TYPOGRAPHY
       z-index: 3; }
     .slider__slide-wrapper.previous:last-child {
       z-index: 2; }
-    @media (min-width: 48em) {
-      .slider__slide-wrapper.next:first-child .slider__content-box {
-        animation: slideright 2.5s;
-        animation-iteration-count: 1;
-        animation-duration: 1.5s;
-        animation-timing-function: ease; }
-      @keyframes slideright {
-        0% {
-          right: 530px;
-          opacity: 0; }
-        100% {
-          right: 130px;
-          opacity: 1; } } }
-    @media (min-width: 48em) {
-      .slider__slide-wrapper.next:first-child .slider__content-box .subtitle::after {
-        opacity: 0;
-        animation: linegrow 4s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        animation-delay: 1s;
-        animation-duration: 2s;
-        animation-timing-function: ease-in-out; }
-      @keyframes linegrow {
-        0% {
-          max-width: 0;
-          opacity: 0; }
-        100% {
-          max-width: 86px;
-          opacity: 1; } } }
+    .slider__slide-wrapper.next:first-child .slider__content-box {
+      animation: slideright 2.5s;
+      animation-iteration-count: 1;
+      animation-duration: 1.5s;
+      animation-timing-function: ease; }
+      @media (min-width: 48em) {
+        @keyframes slideright {
+          0% {
+            right: 530px;
+            opacity: 0; }
+          100% {
+            right: 120px;
+            opacity: 1; } } }
+      @media (min-width: 87em) {
+        @keyframes slideright {
+          0% {
+            right: 530px;
+            opacity: 0; }
+          100% {
+            right: 60px;
+            opacity: 1; } } }
+      @media (min-width: 99.5em) {
+        @keyframes slideright {
+          0% {
+            right: 530px;
+            opacity: 0; }
+          100% {
+            right: 10px;
+            opacity: 1; } } }
+      @media (min-width: 48em) {
+        .slider__slide-wrapper.next:first-child .slider__content-box .subtitle::after {
+          opacity: 0;
+          animation: linegrow 4s;
+          animation-fill-mode: forwards;
+          animation-iteration-count: 1;
+          animation-delay: 1s;
+          animation-duration: 2s;
+          animation-timing-function: ease-in-out; }
+        @keyframes linegrow {
+          0% {
+            max-width: 0;
+            opacity: 0; }
+          100% {
+            max-width: 86px;
+            opacity: 1; } } }
   .slider__image {
     width: 100%;
     height: 280px;
